<resources>
    <string name="app_name">FoodyFirebase</string>
    <string name="loading">Loading...</string>
    <string name="version">Version</string>
    <string name="facebook_app_id">407755669850248</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="request_input_email">Please input your email !</string>
    <string name="request_input_Password">Please input your password !</string>
    <string name="request_input_valid_email">Please input valid email !</string>
    <string name="input_pass_too_weak">Password must be at least 6 character !</string>
    <string name="request_confirm_Password">Let\'s input like your password above !</string>
    <string name="announce_register_success">Register email success !</string>
    <string name="announce_register_failed">Register email failed !</string>
    <string name="announce_connect_failed">Connection failed ! Recheck your WIFI again !</string>
    <string name="progress_create_user_email">Activating...\u0020</string>
    <string name="signin_email_failed">Sign in email failed !</string>
    <string name="restore_password">Restore Password</string>
    <string name="guide_restore_password">Let\'s input your email to restore your password.</string>
    <string name="restore_pass">Restore password</string>
    <string name="not_a_member">You are not a member ?</string>
    <string name="register_new"><u>Register new</u></string>
    <string name="restore_pass_failed">Restore failed !</string>
    <string name="email_restore_pass_sent">Email restore pass has sent.</string>
    <string name="handling">Handling...\u0020</string>
    <string name="sign_in_fb_failed_credential">AuthCredential has been used !</string>
    <string name="sign_in_fb_failed">Sign in facebook failed</string>
    <string name="sign_in_gg_failed">Sign in google failed</string>
    <string name="places">Places</string>
    <string name="food">Food</string>
    <string name="latest">Latest</string>
    <string name="category">Category</string>
    <string name="area">HCM city</string>
    <string name="nearby">Nearby</string>
    <string name="game_and_fun">Game And Fun</string>
    <string name="reviews">Reviews</string>
    <string name="blogs">Blogs</string>
    <string name="top_member">Top Member</string>
    <string name="oder_delivery">Oder Delivery</string>
</resources>
