<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:weightSum="3"
        android:background="@color/transparentBackgroundColor"
        android:padding="@dimen/_25sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center|bottom">

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/foodytext" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.3"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="top"
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/mytextStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restore_password"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_marginTop="@dimen/_15sdp"
                style="@style/mytextStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_restore_password"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtEmailResotre"
                android:layout_marginTop="@dimen/_30sdp"
                style="@style/mytextStyleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/email"
                android:textColorHint="@color/whiteColor" />

            <Button
                android:id="@+id/btnRestorePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/radius_button"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTint="@color/splashBackgroundColor"
                android:paddingLeft="@dimen/_50sdp"
                android:paddingRight="@dimen/_50sdp"
                android:text="@string/restore_pass"
                android:textAllCaps="false"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/whiteColor" />

            <LinearLayout
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/mytextStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:text="@string/not_a_member"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtRegisterNow"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/_15sdp"
                    style="@style/mytextStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_new"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>