<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:weightSum="3"
        android:background="@color/transparentBackgroundColor"
        android:padding="@dimen/_25sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center|bottom">

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/foodytext" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtEmail"
                style="@style/mytextStyleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
                android:drawablePadding="@dimen/_10sdp"
                android:singleLine="true"
                android:hint="@string/email"
                android:textColorHint="@color/whiteColor" />

            <EditText
                android:id="@+id/edtPassword"
                style="@style/mytextStyleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="@dimen/_10sdp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@color/whiteColor" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/radius_button"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTint="@color/splashBackgroundColor"
                android:paddingLeft="@dimen/_50sdp"
                android:paddingRight="@dimen/_50sdp"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/_20sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_40sdp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/whiteColor" />

                <TextView
                    style="@style/mytextStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:text="OR" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/whiteColor" />

            </LinearLayout>

        </LinearLayout>

       <LinearLayout
           android:paddingTop="@dimen/_20sdp"
           android:layout_gravity="top"
           android:orientation="vertical"
           android:paddingLeft="@dimen/_5sdp"
           android:paddingRight="@dimen/_5sdp"
           android:layout_weight="0.8"
           android:layout_width="match_parent"
           android:layout_height="0dp">

           <Button
               android:id="@+id/btnSignInFB"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginLeft="@dimen/_5sdp"
               android:layout_marginRight="@dimen/_5sdp"
               android:layout_marginBottom="@dimen/_10sdp"
               android:background="@color/facebookColor"
               android:drawableLeft="@drawable/icon_facebook"
               android:drawablePadding="@dimen/_10sdp"
               android:paddingLeft="@dimen/_10sdp"
               android:paddingRight="@dimen/_10sdp"
               android:text="@string/sign_in_with_facebook"
               android:textAllCaps="false"
               android:textColor="@color/whiteColor"
               android:textSize="@dimen/_15sdp" />

           <Button
               android:id="@+id/btnSignInGG"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginLeft="@dimen/_5sdp"
               android:layout_marginTop="@dimen/_10sdp"
               android:layout_marginRight="@dimen/_5sdp"
               android:background="@color/splashBackgroundColor"
               android:drawableLeft="@drawable/icon_google"
               android:textSize="@dimen/_15sdp"
               android:drawablePadding="@dimen/_10sdp"
               android:paddingLeft="@dimen/_10sdp"
               android:paddingRight="@dimen/_10sdp"
               android:text="@string/sign_in_with_google"
               android:textAllCaps="false"
               android:textColor="@color/whiteColor" />

       </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="@dimen/_20sdp"
        android:paddingRight="@dimen/_25sdp"
        android:paddingLeft="@dimen/_25sdp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtForgotPass"
            android:text="@string/forgot_password"
            android:layout_weight="1"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtSignUp"
            android:text="@string/sign_up"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>