<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:weightSum="3"
        android:background="@color/transparentBackgroundColor"
        android:padding="@dimen/_25sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center|bottom">

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/foodytext" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtEmailRegister"
                style="@style/mytextStyleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/email"
                android:textColorHint="@color/whiteColor" />

            <EditText
                android:id="@+id/edtPassRegister"
                style="@style/mytextStyleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/password"
                android:textColorHint="@color/whiteColor" />

            <EditText
                android:id="@+id/edtConfirmPass"
                style="@style/mytextStyleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/whiteColor" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/radius_button"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTint="@color/splashBackgroundColor"
                android:paddingLeft="@dimen/_50sdp"
                android:paddingRight="@dimen/_50sdp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/whiteColor" />

        </LinearLayout>

        <LinearLayout
            android:paddingTop="@dimen/_20sdp"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:layout_weight="0.8"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    </LinearLayout>



</RelativeLayout>